--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: .NET
+name: .NET Deployment
 
 on:
   push:
@@ -23,4 +23,4 @@ jobs:
           server: win8127.site4now.net
           username: odemwingie-001
           password: Odemwingie@6
-          target-delete: true
+          target-path: '\app\'
